# libpd

./: .classpath  .gitignore  .gitmodules  .project  .travis.yml  Android.mk  CHANGES.txt  CMakeLists.txt  COPYING  LICENSE.txt  Makefile  Makefile.mac  README.javalib.md  README.md  README.txt  appveyor.yml  common.mk  cross-compile-java.sh  libpd.podspec  libpd_csharp.sln  libpd_win.sln  make.scm  mingw32_build_csharp.bat  mingw64_build_csharp.bat  mingw_build.bat  mingw_build64.bat  windows-build.bat  windows-build.sh
.github/workflows/: builds.yaml
PureData/: PureData.h
TPCircularBuffer/: TPCircularBuffer+AudioBufferList.c  TPCircularBuffer+AudioBufferList.h  TPCircularBuffer.podspec
appveyor/: mingw32_build_libpd.bat  mingw64_build_libpd.bat
cpp/: LICENSE.txt  PdBase.cpp  PdBase.hpp  PdMidiReceiver.hpp  PdReceiver.hpp  PdTypes.cpp  PdTypes.hpp
csharp/: Hooks.cs  LibPDBinding.csproj  LibPDBinding.nuspec  LibPDBinding.sln  LibPDBinding.targets  LibPDBinding.userprefs  LibPDMessage.cs  LibPDNativeMessaging.cs  LibPDNativeMethods.cs  LibPDNativeMidi.cs  README.md  README.txt  app.config  readme.txt
csharp/Managed/: Binding.cs  Messaging.cs  Midi.cs  Patch.cs  Pd.cs  PdArray.cs  PdProcessException.cs
csharp/Managed/Data/: Bang.cs  Float.cs  IAtom.cs  Symbol.cs
csharp/Managed/Events/: AftertouchEventArgs.cs  BangEventArgs.cs  ControlChangeEventArgs.cs  FloatEventArgs.cs  ListEventArgs.cs  MessageEventArgs.cs  MidiByteEventArgs.cs  NoteOnEventArgs.cs  PitchbendEventArgs.cs  PolyAftertouchEventArgs.cs  PrintEventArgs.cs  ProgramChangeEventArgs.cs  SymbolEventArgs.cs
csharp/Managed/Utils/: MessageInvocation.cs  Messaging.cs
csharp/Model/: LibPDManager.cs  LibPDMessage.cs  LibPDPatch.cs
csharp/Native/: Audio.cs  Defines.cs  General.cs  LibPDNativeMessaging.cs  LibPDNativeMethods.cs  LibPDNativeMidi.cs  Messaging.cs  Midi.cs  MultiInstance.cs  PInvoke.cs
csharp/Properties/: AssemblyInfo.cs
csharp/example/: LibPDWaveProvider.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  random_sine.pd
csharp/libpd/: LibPDBinding.csproj  LibPDList.cs  LibPDManager.cs  LibPDMessage.cs  LibPDNativeHooks.cs  LibPDNativeMessaging.cs  LibPDNativeMethods.cs  LibPDNativeMidi.cs  LibPDPatch.cs
csharptests/: LibPDBindingTest.csproj  LibPDTests.cs
jni/: opensl_io.c  opensl_io.h  z_jni.h  z_jni_native_hooks.h  z_jni_opensl.c  z_jni_pa.c  z_jni_plain.c  z_jni_shared.c  z_jni_utils.h  z_libpd_raw.h
jni/oboe/: OboeEngine.cpp  OboeEngine.h  PdStreams.h  z_jni_oboe.cpp  z_jni_oboe.h  z_jni_oboe_shared.c
libpd.xcodeproj/: project.pbxproj
libpd.xcodeproj/xcshareddata/xcschemes/: PureData.xcscheme  libpd-ios.xcscheme
libpd_wrapper/: gen.scm  m_libpd.c  ringbuffer.c  s_libpdmidi.c  x_libpdreceive.c  x_libpdreceive.h  z_csharp_helper.c  z_csharp_helper.h  z_hooks.c  z_hooks.h  z_hookset.c  z_hookset.h  z_jni.c  z_jni.h  z_libpd.c  z_libpd.h  z_queued.c  z_queued.h  z_util.c  z_util.h
libpd_wrapper/util/: ringbuffer.c  ringbuffer.h  z_hook_util.c  z_hook_util.h  z_print_util.c  z_print_util.h  z_queued.c  z_queued.h  z_util.h
libpds/: bin2c.c  gen.scm  libpds.c  m_libpd.c
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
objc/: AudioHelpers.h  AudioHelpers.m  PdArray.h  PdArray.m  PdAudio.h  PdAudio.m  PdAudioController.h  PdAudioController.m  PdAudioUnit.h  PdAudioUnit.m  PdBase.h  PdBase.m  PdBuffer.h  PdBuffer.m  PdBufferedAudioUnit.h  PdBufferedAudioUnit.m  PdDispatcher.h  PdDispatcher.m  PdFile.h  PdFile.m  PdInstance.h  PdInstance.m  PdMidiDispatcher.h  PdMidiDispatcher.m  PdPatchArray.h  PdPatchArray.m  VirtualRingBuffer.h  VirtualRingBuffer.m  libpd_Prefix.pch  ringbuffer.c  ringbuffer.h
pure-data/doc/5.reference/: about.pd  tabread-help.pd
pure-data/extra/bonk~/: Android.mk
pure-data/extra/choice/: Android.mk
pure-data/extra/expr~/: Android.mk  vexp.c  vexp_fun.c  vexp_if.c
pure-data/extra/fiddle~/: Android.mk  fiddle~.pd_linux
pure-data/extra/loop~/: Android.mk
pure-data/extra/lrshift~/: Android.mk
pure-data/extra/pd~/: z.pd
pure-data/extra/pique/: Android.mk
pure-data/extra/sigmund~/: Android.mk
pure-data/src/: Android.mk  Makefile  Makefile.mac  closebang.c  d_array.c  d_delay.c  d_math.c  d_osc.c  d_soundfile.c  d_ugen.c  e_dac.c  e_fft.c  e_gfxstub.c  e_midi.c  e_sqrt.c  e_sqrt.h  g_array.c  g_bang.c  g_canvas.c  g_canvas.h  g_editor.c  g_graph.c  g_hdial.c  g_hslider.c  g_magicglass.c  g_magicglass.h  g_mycanvas.c  g_numbox.c  g_readwrite.c  g_rtext.c  g_scalar.c  g_text.c  g_toggle.c  g_vdial.c  g_vslider.c  g_vumeter.c  import.c  initbang.c  loadbang.c  m_atom.c  (+27 more)
pure-data/src/example/: Makefile  pdtest.c
pure-data/tcl/: Makefile  Makefile.am  Makefile.in  dialog_array.tcl  dialog_audio.tcl  dialog_gatom.tcl  dialog_iemgui.tcl  dialog_midi.tcl  dialog_path.tcl  helpbrowser.tcl  makeapp.tcl  pd-gui.tcl  pd-gui.tcl.orig  pd_bindings.tcl  pd_bindings.tcl.orig  pd_connect.tcl  pd_guiprefs.tcl  pd_menucommands.tcl  pd_menus.tcl  pd_menus.tcl.orig  pd_menus.tcl.rej  pdtk_canvas.tcl  pdtk_text.tcl  pdwindow.tcl  pdwindow.tcl.orig  pdwindow.tcl.rej  pkgIndex.tcl  scrollboxwindow.tcl  wheredoesthisgo.tcl
python/: Makefile  echo.py  filter.py  lop.pd  pygame_fun_test.py  pylibpd.i  setup.py  test.pd  test.py
samples/cppJackAudioTest/: .gitignore  Makefile
samples/cppRTAudioTest/: Makefile  README.md
samples/cppTest/: .gitignore  Makefile  Project.xcconfig  cppTest-Info.plist
samples/csharp/: LibPDExample.csproj  LibPDWaveProvider.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  random_sine.pd
samples/emscripten/: README.md
samples/guiTest/: Makefile  guitest.c  test.pd
samples/iosTest/: test.pd
samples/libpdsTest/: Makefile  libpdstest.c  test1.pd  test2.pd
samples/objc/: .gitignore
samples/python/: bloopy.pd  echo.pd  echo.py  filter.py  funtest.pd  pyaudio_test.py  pygame_fun_test.py  pygame_test.py  test.pd  test.py
samples/test/: Makefile  pdtest.c  test.pd
samples/zig/: .gitignore  build.zig  build.zig.zon  emcc.zig
scripts/: update_vanilla.sh
tests/: LoadPatchTest.cpp
(+223 files in other folders)
